# ROS-semester-project-3

./: .gitignore  Pose_test_computation.py  README.md  data_from_tests.py  ladsjflækja.py  ros2 launch ur_bringup ur_moveit.launch..yml
install/: local_setup.sh  setup.sh
install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
install/cv_basics/lib/cv_basics/: show_center_depth
install/cv_basics/share/cv_basics/: package.sh  package.xml
install/py_pubsub/share/py_pubsub/: package.sh
log/: latest_build
src/: Find_flange_pose.py  Pose_test_computation.py  calebration_data_handeling.py  cam_tracker_test.py  camera_transform.py  dialate_erode.py  learning.cpp  learning.py  ros2 launch ur_bringup ur_moveit.launch..yml  tempCodeRunnerFile.py  terminalinput.py
src/cv_basics/: setup.py
src/cv_basics/cv_basics/: depth-sub.py  realsense_depth.py  show_center_depth.py
src/detector/: package.xml  setup.py
src/detector/detector/: hand_detection.py
src/handtracker/: package.xml  setup.cfg  setup.py
src/handtracker/handtracker/: hand_pose.py  show_center_depth.py  show_center_depth_backup.py  test.py
src/hello_ur_mover/: CMakeLists.txt  package.xml
src/hello_ur_mover/launch/: hello_ur_mover_launch.py
src/hello_ur_mover/src/: hello_ur_mover.cpp
src/pose_sender/: package.xml  setup.cfg  setup.py
src/pose_sender/pose_sender/: pose_sender.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: subscriber_member_function.py
src/ur-mover/: package.xml  setup.cfg  setup.py
src/ur_mover/: CMakeLists.txt  package.xml  setup.py
src/ur_mover/launch/: ur_mover_launch.py
src/ur_mover/src/: ur_mover.cpp
src/ur_mover/ur_mover/: pose_sender.py  pose_sender_old.py  pose_sender_working.py
src/ur_mover_copy/: package.xml  setup.cfg  setup.py
src/ur_mover_copy/ur_mover_copy/: test.py
